--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="img-wrapper">
-                            <img src="assets/images/beautiful-delicious-dessert-strawberry-cream-fruit.jpg"
+                            <img src="./assets/beautiful-delicious-dessert-strawberry-cream-fruit.jpg"
                                 class="d-block w-100" alt="img">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="img-wrapper">
-                            <img src="assets/images/close-up-delicious-chocolate-cupcakes-with-raspberry.jpg"
+                            <img src="./assets/delicious-rainbow-cupcakes-still-life.jpg"
                                 class="d-block w-100" alt="img">
                         </div>
                     </div>
 
                     <div class="carousel-item">
                         <div class="img-wrapper">
-                            <img src="assets/images/delicious-rainbow-cupcakes-still-life.jpg" class="d-block w-100"
+                            <img src="./assets/SiteLogo.png" class="d-block w-100"
                                 alt="img">
                         </div>
                     </div>
